// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`teste de mi componente <SearchScreen /> should show a default screen 1`] = `
<div>
  <h1>
    Search Screen 
  </h1>
  <hr />
  <div
    className=" row"
  >
    <div
      className="col-5"
    >
      <h4>
         Search form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          className=" form-control"
          name="superhero"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-outline-primary btn-block"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
         Results
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        searcha a hero
      </div>
    </div>
  </div>
</div>
`;

exports[`teste de mi componente <SearchScreen /> should show to Batman and an imput with a value of  queryScreen 1`] = `
<div>
  <h1>
    Search Screen 
  </h1>
  <hr />
  <div
    className=" row"
  >
    <div
      className="col-5"
    >
      <h4>
         Search form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          className=" form-control"
          name="superhero"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-outline-primary btn-block"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
         Results
      </h4>
      <hr />
      <div
        className="card ms-3"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row no-gutters"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="Batman"
              className="card-img"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Batman
                 
              </h5>
              <p
                className="card-text"
              >
                 
                Bruce Wayne
                 
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                   
                  Detective Comics #27
                </small>
              </p>
              <a
                className="link-secondary"
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                Más...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
